adjust mapping operation style

--- a/webui/templates/htmx/transaction.jinja2
+++ b/webui/templates/htmx/transaction.jinja2
@@ -151,11 +151,11 @@
                     </thead>
                     <tbody>
                     {% for op in mapping_operations %}
-                        <tr>
+                        <tr style="word-break: break-all">
                             <td><a href="/program?id={{ op.program_id }}">{{ op.program_id }}</a></td>
                             <td><span class="mono">{{ op.mapping_name }}[{{ op.key }}]</span></td>
-                            <td><span class="mono">{{ op.previous_value }}</span></td>
-                            <td><span class="mono">{{ op.value }}</span></td>
+                            <td><span class="mono">{% if op.previous_value %}{{ op.previous_value }}{% else %}<em>[new]</em>{% endif %}</span></td>
+                            <td><span class="mono">{% if op.value %}{{ op.value }}{% else %}<em>[removed]</em>{% endif %}</span></td>
                         </tr>
                     {% endfor %}
                     </tbody>
