proper sync info refreshing

--- a/webui/templates/htmx/400.jinja2
+++ b/webui/templates/htmx/400.jinja2
@@ -1,5 +1,5 @@
-{% from "macros.jinja2" import htmx_title %}
-
+{% from "macros.jinja2" import htmx_title, sync_notice %}
+{{ sync_notice(sync_info) }}
     <div class="content">
         <h1>400</h1>
         <p>can't really understand what you are trying to do here</p>
