--- a/webui/templates/htmx/404.jinja2
+++ b/webui/templates/htmx/404.jinja2
@@ -1,5 +1,5 @@
-{% from "macros.jinja2" import htmx_title %}
-
+{% from "macros.jinja2" import htmx_title, sync_notice %}
+{{ sync_notice(sync_info) }}
     <div class="content">
         <h1>404</h1>
         <p>can't find what you are looking for</p>
