--- a/webui/templates/htmx/500.jinja2
+++ b/webui/templates/htmx/500.jinja2
@@ -1,5 +1,5 @@
-{% from "macros.jinja2" import htmx_title %}
-
+{% from "macros.jinja2" import htmx_title, sync_notice %}
+{{ sync_notice(sync_info) }}
     <div class="content">
         <h1>500</h1>
         <p>something went horribly wrong</p>
