--- a/webui/templates/htmx/address.jinja2
+++ b/webui/templates/htmx/address.jinja2
@@ -1,5 +1,6 @@
 
-{% from "macros.jinja2" import data_line, data_line_safe, htmx_title %}
+{% from "macros.jinja2" import data_line, data_line_safe, htmx_title, sync_notice %}
+{{ sync_notice(sync_info) }}
 
     <div class="content" hx-boost="true" hx-target="#htmx-body" hx-swap="innerHTML show:no" hx-push-url="true">
 
