--- a/webui/templates/htmx/index.jinja2
+++ b/webui/templates/htmx/index.jinja2
@@ -1,4 +1,5 @@
-{% from "macros.jinja2" import htmx_title %}
+{% from "macros.jinja2" import htmx_title, sync_notice %}
+{{ sync_notice(sync_info) }}
 
     <div class="content">
 
