framework for tools page

--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -51,6 +51,7 @@
                         <li><a href="/calc">Calculator</a></li>
                     </ul>
                 </li>
+                <li><a href="/tools">Tools</a></li>
                 <li>
                     <a href="#">Help</a>
                     <ul class="menu">
