fix timezone not applying on htmx load

--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -111,11 +111,13 @@
         integrity="sha512-j+QoMRpO36QMBWcBvmktsy35CPVqxMOiLEp42+0T87V/sFWHGT/d0d+0unePWCqfCKXggIzhcTvIJeBiMUGofw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script id="content-script"></script>
+<script src="/static/base_script_v1.js"></script>
 <script>
     $(document).foundation()
 
     htmx.on("htmx:afterSwap", () => {
         $(document).foundation()
+        apply_timezone()
     })
 
     htmx.on("htmx:beforeSwap", function(e) {
@@ -144,6 +146,5 @@
         }
     {% endif %}
 </script>
-<script src="/static/base_script_v0.js"></script>
 </body>
 </html>
