fix js unusable after navigating back

--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -128,7 +128,7 @@
     })
 
     {% if "PLAUSIBLE" | get_env %}
-        const el = document.getElementById('plausible-optout');
+        el = document.getElementById('plausible-optout');
         if (localStorage.getItem('plausible_ignore') === 'true') {
             el.innerHTML = 'Opt in';
         } else {
