add validator page

--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -41,6 +41,7 @@
                     <a href="#">Blockchain</a>
                     <ul class="menu">
                         <li><a href="/blocks">Blocks</a></li>
+                        <li><a href="/validators">Validators</a></li>
                         <li><a href="/programs">Programs</a></li>
                     </ul>
                 </li>
